<resources>
    <string name="app_name">Rock Paper Scissors GAME</string>
    <string name="result"> Make your choice  </string>>
    <string name="ReturnButton"> Return </string>
    <string name="ComputadorScore"> Computer  </string>
    <string name="playScore"> Player  </string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="homePag_RadioChoice">The best of ...</string>
    <string name="choiceRadio3">3</string>
    <string name="choiceRadio5">5</string>
    <string name="choiceRadio10">10</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_historic">Historic</string>
    <string name="Date_HfragmentofGame">Date</string>
    <string name="Computer_HfragmentofGame">Computer</string>
    <string name="Player_HfragmentofGame">Player</string>
    <string name="Time_HfragmentofGame">Time</string>

</resources>
